<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="700dp"
    android:layout_height="270dp"
    android:background="@drawable/dialog_box_bg"
    android:orientation="vertical"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingTop="25dp"
    android:paddingBottom="25dp" >

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_undo_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:background="@drawable/custom_btn"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/undo_changes"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_discard_cancel"
            android:layout_width="166dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:background="@drawable/custom_btn"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/cancel"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_container"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="30dp"
            android:src="@drawable/question" />

        <TextView
            android:id="@+id/question"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/discard_question"
            android:textColor="@color/text_color"
            android:textSize="28sp" />
    </LinearLayout>

</RelativeLayout>