<LinearLayout 
    android:id="@+id/parent_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:svg="http://schemas.android.com/apk/res/dk.aau.cs.giraf.zebra"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SequenceActivity"
    android:focusableInTouchMode="true" >

    <RelativeLayout 
        android:id="@+id/sequence_bar"
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:orientation="horizontal"
        android:background="@drawable/main_topbar_gradient_bg">
        
        <dk.aau.cs.giraf.zebra.RoundedImageView 
            android:id="@+id/sequence_image"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp" />


         <ImageButton
            android:id="@+id/cancel_button"
            android:contentDescription="@string/discard_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:src="@drawable/btn_cancel_sequence" />
         
         <ImageButton
            android:id="@+id/ok_button"
            android:contentDescription="@string/save_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/cancel_button"
            android:layout_centerVertical="true"
            android:layout_marginRight="87dp"
            android:background="@null"
            android:src="@drawable/btn_ok_sequence" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/ok_button"
            android:layout_toRightOf="@+id/sequence_image"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/sequence_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:background="#00000000"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/text_color"
                android:textSize="48sp"
                android:textColorHint="@color/text_hint_color"
                android:hint="@string/unnamed_sequence" >
            </EditText>

            <TextView
                android:id="@+id/child_name"
                android:layout_marginLeft="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/text_color_light"
                android:textIsSelectable="true"
                android:textSize="26sp" />
        </LinearLayout>

    </RelativeLayout>
    
    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:overScrollMode="always"
        android:padding="0dp"
        android:fadeScrollbars="false">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <dk.aau.cs.giraf.zebra.SequenceViewGroup
                android:id="@+id/sequenceViewGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                svg:horizontalSpacing="20dp"
                svg:itemHeight="@dimen/activity_main_picto_size"
                svg:itemWidth="@dimen/activity_main_picto_size"
                android:background="@drawable/main_picto_container_bg"
                android:layout_gravity="center_vertical">
            </dk.aau.cs.giraf.zebra.SequenceViewGroup>
        </FrameLayout>
		
    </HorizontalScrollView>
    
</LinearLayout>